--- a/styles/styles.css
+++ b/styles/styles.css
@@ -156,8 +156,8 @@
      -webkit-align-items: center;
      -ms-flex-align: center;
      align-items: center;
-     background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0%, rgba(0, 0, 0, 0.43)), to(rgba(0, 0, 0, 0.71))), url("/images/photos/68385dcb2b9f4773.webp");
-     background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.43) 0%, rgba(0, 0, 0, 0.71)), url("/images/photos/68385dcb2b9f4773.webp");
+     background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0%, rgba(0, 0, 0, 0.43)), to(rgba(0, 0, 0, 0.71))), url("./images/photos/68385dcb2b9f4773.webp");
+     background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.43) 0%, rgba(0, 0, 0, 0.71)), url("./images/photos/68385dcb2b9f4773.webp");
      background-position: 0px 0px, 0px 0px;
      background-size: auto, cover;
      background-repeat: repeat, no-repeat;
@@ -650,8 +650,8 @@
      -ms-flex-align: center;
      align-items: center;
      background-color: transparent;
-     background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.68))), url("/images/photos/m-runner.webp");
-     background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.68)), url("/images/photos/m-runner.webp");
+     background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.68))), url("./images/photos/m-runner.webp");
+     background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.68)), url("./images/photos/m-runner.webp");
      background-position: 0px 0px, 0px 0px;
      background-size: auto, cover;
      background-attachment: scroll, fixed;
