--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4022,3 +4022,9 @@
        margin-top: 0px;
      }
    }
+
+@media screen and (max-width: 768px) {
+   .calendly-inline-widget{
+      height: 980px;
+   }
+}
