partners color gray

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4026,7 +4026,7 @@
    }
 
 .partners-adv-platforms {
-   background-color: ##1792d4;
+   background-color: #ebebeb;
 }
 
 @media screen and (max-width: 768px) {
