--- a/styles/styles.css
+++ b/styles/styles.css
@@ -653,8 +653,8 @@
      -ms-flex-align: center;
      align-items: center;
      background-color: transparent;
-     background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.68))), url(".././images/photos/1_cGZF-4g_DbSgUsE3yjmphA.jpeg");
-     background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.68)), url(".././images/photos/1_cGZF-4g_DbSgUsE3yjmphA.jpeg");
+     background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.68))), url(".././images/photos/sunset.png");
+     background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.68)), url(".././images/photos/sunset.png");
      background-position: 0px 0px, 0px 0px;
      background-size: auto, cover;
      background-attachment: scroll, fixed;
